--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "node-ssh": "^13.1.0",
