--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
+    "serve": "^14.2.1",
     "socket.io-client": "4.6.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
