--- a/render.yaml
+++ b/render.yaml
@@ -13,14 +13,12 @@ services:
         value: "10000"
 
   # Frontend Service
-  - type: static
+  - type: web
     name: vpn-frontend
+    runtime: node
+    plan: free
     buildCommand: cd frontend && npm install && npm run build
-    publishDirectory: frontend/build
+    startCommand: npx serve -s frontend/build
     envVars:
       - key: REACT_APP_API_URL
-        value: "https://vpn-backend-ma2x.onrender.com"
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html 
+        value: "https://vpn-backend-ma2x.onrender.com" 
