--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,7 +46,7 @@
     "process": "^0.11.10",
     "react-app-rewired": "^2.2.1",
     "typechain": "^8.3.2",
-    "typescript": "^5.0.4",
+    "typescript": "4.9.5",
     "vm-browserify": "^1.1.2"
   },
   "scripts": {
