Fix Node.js version and add missing dependencies

--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,7 @@ services:
     name: vpn-backend
     runtime: node
     plan: free
+    nodeVersion: 16.20.0
     buildCommand: cd backend && npm install
     startCommand: cd backend && node server.js
     envVars:
@@ -17,7 +18,8 @@ services:
     name: vpn-frontend
     runtime: node
     plan: free
-    buildCommand: cd frontend && npm install --legacy-peer-deps && npm run build
+    nodeVersion: 16.20.0
+    buildCommand: cd frontend && npm install --legacy-peer-deps && CI=false npm run build
     startCommand: npx serve -s frontend/build
     envVars:
       - key: REACT_APP_API_URL
