--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "serve": "^14.2.1",
     "socket.io-client": "4.6.1",
     "stream-browserify": "^3.0.0",
@@ -40,6 +40,8 @@
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.2.0",
     "@types/socket.io-client": "^1.4.36",
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0",
     "browserify-zlib": "^0.2.0",
     "dotenv": "^17.0.0",
     "path-browserify": "^1.0.1",
