--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "express": "^4.18.2",
     "node-ssh": "^13.1.0",
     "socket.io": "^4.7.2",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.6",
+    "http-proxy-middleware": "^2.0.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
