--- a/render.yaml
+++ b/render.yaml
@@ -23,10 +23,25 @@ services:
         value: "GET, POST, OPTIONS"
       - path: /*
         name: Access-Control-Allow-Headers
-        value: "Content-Type, Authorization"
+        value: "Content-Type, Authorization, X-Requested-With"
       - path: /*
         name: Access-Control-Allow-Credentials
         value: "true"
+      - path: /*
+        name: X-Content-Type-Options
+        value: "nosniff"
+      - path: /*
+        name: X-Frame-Options
+        value: "SAMEORIGIN"
+      - path: /*
+        name: X-XSS-Protection
+        value: "1; mode=block"
+      - path: /*
+        name: Referrer-Policy
+        value: "strict-origin-when-cross-origin"
+      - path: /*
+        name: Content-Security-Policy
+        value: "default-src 'self'; img-src 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; connect-src 'self' https: wss:; frame-src 'self'; font-src 'self' data:;"
 
   # Frontend Service
   - type: web
