--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,21 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "VPN Backend Server",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.5",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "node-ssh": "^13.1.0",
     "socket.io": "^4.7.2",
-    "sqlite3": "^5.1.6",
-    "http-proxy-middleware": "^2.0.6"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+    "sqlite3": "^5.1.6"
   }
 }
